tests/toy/neg/001608_mutation.toylang
program a = { while a do else sleep; } .
